# taskwarrior-habitica-bridge

./: .envrc  .gitignore  CHANGELOG.md  LICENSE  README.md  compat.nix  default.nix  flake.nix  pinned-packages.nix  setup.sh  shell.nix  taskbitica.cabal  taskwarrior-habitica-bridge.cabal
hooks/: on-add.task2habitica  on-exit.task2habitica  on-modify.task2habitica
src/: App.hs  Main.hs  TaskUtils.hs  Taskwarrior.hs  Types.hs  Web.hs
