name:                taskbitica
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
copyright:           (c) 2019 Rob Whitaker
category:            CLI
author:              Rob Whitaker
maintainer:          Rob Whitaker <robjameswhitaker@gmail.com>
cabal-version:       >= 1.10
synopsis:            Sync between Taskwarrior and Habitica.
-- homepage:
-- bug-reports:
build-type:          Simple

extra-source-files:
    README.md
    CHANGELOG.md

executable taskbitica
  main-is:             Main.hs
  other-modules:       Types
                     , Web
                     , TaskUtils
  build-depends:       base
                     , aeson
                     , text
                     , time
                     , req
                     , process
                     , bytestring
                     , utf8-string
                     , mtl
                     , transformers
                     , containers
                     , unordered-containers
                     , uuid
                     , newtype-generics
                     , directory
  hs-source-dirs:      src
  default-language:    Haskell2010
