name:                taskbitica
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
copyright:           (c) 2019 Rob Whitaker
category:            CLI
author:              Rob Whitaker
maintainer:          Rob Whitaker <robjameswhitaker@gmail.com>
cabal-version:       >= 1.10
synopsis:            Sync between Taskwarrior and Habitica.
-- homepage:
-- bug-reports:
build-type:          Simple

extra-source-files:
    README.md
    CHANGELOG.md

executable taskbitica
  main-is:             Main.hs
  ghc-options:         -Wall
                       -fwarn-incomplete-uni-patterns
                       -fwarn-tabs
                       -fwarn-incomplete-record-updates
                       -fno-warn-missing-signatures
                       -fno-warn-type-defaults
                       -Werror
                       -Wwarn=unused-imports
                       -Wwarn=unused-local-binds
                       -Wwarn=unused-matches
                       -Wwarn=unused-do-bind
  other-modules:       Types
                     , Web
                     , TaskUtils
                     , Taskwarrior
                     , App
  build-depends:       base
                     , aeson
                     , text
                     , time
                     , req
                     , process
                     , bytestring
                     , utf8-string
                     , mtl
                     , transformers
                     , containers
                     , unordered-containers
                     , uuid
                     , newtype-generics
                     , directory
                     , filepath
                     , http-client
  hs-source-dirs:      src
  default-language:    Haskell2010
